service/projectService/kubeScripts/ui.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "ui"
  namespace: "default"
  labels:
    app: "ui"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "ui"
  template:
    metadata:
      labels:
        app: "ui"
    spec:
      containers:
      - name: "ui"
        image: "gcr.io/fiddler/ui:latest"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "ui-service"
  namespace: "default"
  labels:
    app: "ui"
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    app: "ui"
  type: "NodePort"
